--- a/static/css/style.css
+++ b/static/css/style.css
@@ -686,6 +686,22 @@ video {
   margin-top: 1.75rem;
 }
 
+.mb-10{
+  margin-bottom: 2.5rem;
+}
+
+.ml-0{
+  margin-left: 0px;
+}
+
+.mr-0{
+  margin-right: 0px;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
 .inline-block{
   display: inline-block;
 }
@@ -758,6 +774,14 @@ video {
   height: 100vh;
 }
 
+.h-\[50vh\]{
+  height: 50vh;
+}
+
+.h-auto{
+  height: auto;
+}
+
 .w-1\/2{
   width: 50%;
 }
@@ -820,6 +844,18 @@ video {
 
 .w-screen{
   width: 100vw;
+}
+
+.w-16{
+  width: 4rem;
+}
+
+.w-\[5rem\]{
+  width: 5rem;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .max-w-56{
@@ -893,6 +929,10 @@ video {
   gap: 1rem;
 }
 
+.gap-5{
+  gap: 1.25rem;
+}
+
 .space-x-32 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(8rem * var(--tw-space-x-reverse));
@@ -957,6 +997,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
+}
+
+.space-y-10 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
 .self-end{
@@ -1139,6 +1185,14 @@ video {
   padding-top: 1.5rem;
 }
 
+.pr-0{
+  padding-right: 0px;
+}
+
+.pt-20{
+  padding-top: 5rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1292,11 +1346,125 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:mb-\[3rem\]{
+    margin-bottom: 3rem;
+  }
+
+  .md\:ml-10{
+    margin-left: 2.5rem;
+  }
+
   .md\:flex{
     display: flex;
   }
 
   .md\:hidden{
     display: none;
+  }
+
+  .md\:h-\[70vh\]{
+    height: 70vh;
+  }
+
+  .md\:w-20{
+    width: 5rem;
+  }
+
+  .md\:w-\[7rem\]{
+    width: 7rem;
+  }
+
+  .md\:bg-\[length\:40\%\]{
+    background-size: 40%;
+  }
+
+  .md\:px-20{
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .md\:pr-20{
+    padding-right: 5rem;
+  }
+
+  .md\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .md\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:mr-20{
+    margin-right: 5rem;
+  }
+
+  .lg\:mt-0{
+    margin-top: 0px;
+  }
+
+  .lg\:h-\[230vh\]{
+    height: 230vh;
+  }
+
+  .lg\:h-\[92vh\]{
+    height: 92vh;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
+  .lg\:w-1\/3{
+    width: 33.333333%;
+  }
+
+  .lg\:w-\[50\%\]{
+    width: 50%;
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+
+  .lg\:gap-10{
+    gap: 2.5rem;
+  }
+
+  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .lg\:bg-\[length\:35\%\]{
+    background-size: 35%;
+  }
+
+  .lg\:text-left{
+    text-align: left;
+  }
+
+  .lg\:text-right{
+    text-align: right;
+  }
+
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .lg\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
   }
 }
