--- a/static/css/style.css
+++ b/static/css/style.css
@@ -560,48 +560,8 @@ video {
   position: static;
 }
 
-.absolute{
-  position: absolute;
-}
-
-.relative{
-  position: relative;
-}
-
-.bottom-0{
-  bottom: 0px;
-}
-
-.left-0{
-  left: 0px;
-}
-
 .z-10{
   z-index: 10;
-}
-
-.m-14{
-  margin: 3.5rem;
-}
-
-.mx-12{
-  margin-left: 3rem;
-  margin-right: 3rem;
-}
-
-.mx-5{
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
-.mx-\[10\%\]{
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-.mx-\[25\%\]{
-  margin-left: 25%;
-  margin-right: 25%;
 }
 
 .my-2{
@@ -609,69 +569,32 @@ video {
   margin-bottom: 0.5rem;
 }
 
-.my-3{
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
-.-mb-60{
-  margin-bottom: -15rem;
-}
-
-.-ml-64{
-  margin-left: -16rem;
-}
-
-.-mr-64{
-  margin-right: -16rem;
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .mb-2{
   margin-bottom: 0.5rem;
 }
 
-.mb-\[3rem\]{
-  margin-bottom: 3rem;
-}
-
-.ml-10{
-  margin-left: 2.5rem;
+.ml-0{
+  margin-left: 0px;
 }
 
 .ml-2{
   margin-left: 0.5rem;
 }
 
-.ml-20{
-  margin-left: 5rem;
+.mr-0{
+  margin-right: 0px;
 }
 
-.ml-24{
-  margin-left: 6rem;
-}
-
-.ml-\[12\%\]{
-  margin-left: 12%;
-}
-
-.ml-auto{
-  margin-left: auto;
-}
-
-.mr-20{
-  margin-right: 5rem;
-}
-
-.mr-\[12\%\]{
-  margin-right: 12%;
+.mt-12{
+  margin-top: 3rem;
 }
 
 .mt-20{
   margin-top: 5rem;
-}
-
-.mt-24{
-  margin-top: 6rem;
 }
 
 .mt-5{
@@ -686,26 +609,6 @@ video {
   margin-top: 1.75rem;
 }
 
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
-.ml-0{
-  margin-left: 0px;
-}
-
-.mr-0{
-  margin-right: 0px;
-}
-
-.mt-12{
-  margin-top: 3rem;
-}
-
-.inline-block{
-  display: inline-block;
-}
-
 .flex{
   display: flex;
 }
@@ -718,18 +621,6 @@ video {
   display: none;
 }
 
-.h-1{
-  height: 0.25rem;
-}
-
-.h-10{
-  height: 2.5rem;
-}
-
-.h-44{
-  height: 11rem;
-}
-
 .h-6{
   height: 1.5rem;
 }
@@ -738,32 +629,16 @@ video {
   height: 120vh;
 }
 
-.h-\[20vh\]{
-  height: 20vh;
-}
-
-.h-\[230vh\]{
-  height: 230vh;
-}
-
-.h-\[2px\]{
-  height: 2px;
-}
-
-.h-\[40vh\]{
-  height: 40vh;
-}
-
-.h-\[47\.5vh\]{
-  height: 47.5vh;
+.h-\[50vh\]{
+  height: 50vh;
 }
 
 .h-\[8vh\]{
   height: 8vh;
 }
 
-.h-\[92vh\]{
-  height: 92vh;
+.h-auto{
+  height: auto;
 }
 
 .h-full{
@@ -774,80 +649,20 @@ video {
   height: 100vh;
 }
 
-.h-\[50vh\]{
-  height: 50vh;
-}
-
-.h-auto{
-  height: auto;
-}
-
-.w-1\/2{
-  width: 50%;
-}
-
-.w-10{
-  width: 2.5rem;
-}
-
-.w-12{
-  width: 3rem;
-}
-
-.w-20{
-  width: 5rem;
-}
-
-.w-24{
-  width: 6rem;
+.w-16{
+  width: 4rem;
 }
 
 .w-3\/4{
   width: 75%;
 }
 
-.w-44{
-  width: 11rem;
-}
-
 .w-6{
   width: 1.5rem;
 }
 
-.w-\[20\%\]{
-  width: 20%;
-}
-
-.w-\[30\%\]{
-  width: 30%;
-}
-
-.w-\[40\%\]{
-  width: 40%;
-}
-
 .w-\[50\%\]{
   width: 50%;
-}
-
-.w-\[7rem\]{
-  width: 7rem;
-}
-
-.w-\[calc\(100\%-1\.3em\)\]{
-  width: calc(100% - 1.3em);
-}
-
-.w-auto{
-  width: auto;
-}
-
-.w-screen{
-  width: 100vw;
-}
-
-.w-16{
-  width: 4rem;
 }
 
 .w-\[5rem\]{
@@ -860,15 +675,6 @@ video {
 
 .max-w-56{
   max-width: 14rem;
-}
-
-.origin-left{
-  transform-origin: left;
-}
-
-.scale-x-0{
-  --tw-scale-x: 0;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform{
@@ -889,16 +695,8 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.flex-row{
-  flex-direction: row;
-}
-
 .flex-col{
   flex-direction: column;
-}
-
-.content-center{
-  align-content: center;
 }
 
 .items-start{
@@ -921,10 +719,6 @@ video {
   justify-content: space-between;
 }
 
-.gap-10{
-  gap: 2.5rem;
-}
-
 .gap-4{
   gap: 1rem;
 }
@@ -933,40 +727,16 @@ video {
   gap: 1.25rem;
 }
 
-.space-x-32 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(8rem * var(--tw-space-x-reverse));
-  margin-left: calc(8rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-7 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-8 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(2rem * var(--tw-space-x-reverse));
-  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+.space-y-10 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
 }
 
 .space-y-12 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(3rem * var(--tw-space-y-reverse));
-}
-
-.space-y-16 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(4rem * var(--tw-space-y-reverse));
 }
 
 .space-y-20 > :not([hidden]) ~ :not([hidden]){
@@ -987,28 +757,6 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
-.space-y-6 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-9 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
-}
-
-.space-y-10 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
-}
-
-.self-end{
-  align-self: flex-end;
-}
-
 .overflow-x-hidden{
   overflow-x: hidden;
 }
@@ -1017,38 +765,12 @@ video {
   white-space: nowrap;
 }
 
-.rounded-2xl{
-  border-radius: 1rem;
-}
-
 .rounded-full{
   border-radius: 9999px;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-
 .rounded-md{
   border-radius: 0.375rem;
-}
-
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
-.border{
-  border-width: 1px;
-}
-
-.border-green2{
-  --tw-border-opacity: 1;
-  border-color: rgb(47 149 100 / var(--tw-border-opacity));
-}
-
-.bg-\[\#D8E7DA\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(216 231 218 / var(--tw-bg-opacity));
 }
 
 .bg-bg245_indx{
@@ -1064,11 +786,6 @@ video {
 .bg-green0{
   --tw-bg-opacity: 1;
   background-color: rgb(233 242 229 / var(--tw-bg-opacity));
-}
-
-.bg-green2{
-  --tw-bg-opacity: 1;
-  background-color: rgb(47 149 100 / var(--tw-bg-opacity));
 }
 
 .bg-transparent{
@@ -1092,10 +809,6 @@ video {
   background-image: url('/static/svg/bg_secc3.svg');
 }
 
-.bg-bgsecc5{
-  background-image: url('/static/svg/bg_secc5.svg');
-}
-
 .bg-\[length\:53\%\]{
   background-size: 53%;
 }
@@ -1108,32 +821,16 @@ video {
   background-position: center;
 }
 
-.bg-right{
-  background-position: right;
-}
-
 .bg-right-bottom{
   background-position: right bottom;
 }
 
+.bg-right-top{
+  background-position: right top;
+}
+
 .bg-no-repeat{
   background-repeat: no-repeat;
-}
-
-.p-2{
-  padding: 0.5rem;
-}
-
-.p-4{
-  padding: 1rem;
-}
-
-.p-5{
-  padding: 1.25rem;
-}
-
-.p-8{
-  padding: 2rem;
 }
 
 .px-1{
@@ -1141,19 +838,9 @@ video {
   padding-right: 0.25rem;
 }
 
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.px-\[10\%\]{
-  padding-left: 10%;
-  padding-right: 10%;
 }
 
 .py-2{
@@ -1161,20 +848,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pl-12{
-  padding-left: 3rem;
-}
-
-.pl-20{
-  padding-left: 5rem;
-}
-
-.pr-20{
-  padding-right: 5rem;
+.pr-0{
+  padding-right: 0px;
 }
 
 .pr-4{
   padding-right: 1rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
 }
 
 .pt-5{
@@ -1185,29 +868,12 @@ video {
   padding-top: 1.5rem;
 }
 
-.pr-0{
-  padding-right: 0px;
-}
-
-.pt-20{
-  padding-top: 5rem;
-}
-
-.text-left{
-  text-align: left;
-}
-
 .text-center{
   text-align: center;
 }
 
 .font-lexend{
   font-family: Lexend;
-}
-
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .text-3xl{
@@ -1222,11 +888,6 @@ video {
 
 .text-5xl{
   font-size: 3rem;
-  line-height: 1;
-}
-
-.text-7xl{
-  font-size: 4.5rem;
   line-height: 1;
 }
 
@@ -1281,11 +942,6 @@ video {
   color: rgb(15 57 59 / var(--tw-text-opacity));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .transition-colors{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1298,16 +954,8 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-1000{
-  transition-duration: 1000ms;
-}
-
 .duration-300{
   transition-duration: 300ms;
-}
-
-.duration-500{
-  transition-duration: 500ms;
 }
 
 .ease-in-out{
@@ -1320,29 +968,9 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:scale-110:hover{
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:bg-\[\#D6E0D5\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(214 224 213 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#d4d6d4\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(212 214 212 / var(--tw-bg-opacity));
-}
-
-.hover\:opacity-25:hover{
-  opacity: 0.25;
-}
-
-.group:hover .group-hover\:scale-x-100{
-  --tw-scale-x: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @media (min-width: 768px){
