--- a/static/css/style.css
+++ b/static/css/style.css
@@ -556,17 +556,49 @@ video {
   --tw-contain-style:  ;
 }
 
-.static{
-  position: static;
+.absolute{
+  position: absolute;
+}
+
+.relative{
+  position: relative;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
+.left-0{
+  left: 0px;
 }
 
 .z-10{
   z-index: 10;
 }
 
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+.mx-\[5\%\]{
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.mx-auto{
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.my-6{
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .mb-10{
@@ -585,28 +617,32 @@ video {
   margin-left: 0.5rem;
 }
 
+.ml-auto{
+  margin-left: auto;
+}
+
 .mr-0{
   margin-right: 0px;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
 }
 
 .mt-12{
   margin-top: 3rem;
 }
 
-.mt-20{
-  margin-top: 5rem;
-}
-
-.mt-5{
-  margin-top: 1.25rem;
+.mt-4{
+  margin-top: 1rem;
 }
 
 .mt-6{
   margin-top: 1.5rem;
 }
 
-.mt-7{
-  margin-top: 1.75rem;
+.inline-block{
+  display: inline-block;
 }
 
 .flex{
@@ -621,16 +657,36 @@ video {
   display: none;
 }
 
+.h-10{
+  height: 2.5rem;
+}
+
+.h-12{
+  height: 3rem;
+}
+
+.h-36{
+  height: 9rem;
+}
+
+.h-40{
+  height: 10rem;
+}
+
 .h-6{
   height: 1.5rem;
 }
 
-.h-\[120vh\]{
-  height: 120vh;
+.h-\[20vh\]{
+  height: 20vh;
 }
 
-.h-\[50vh\]{
-  height: 50vh;
+.h-\[2px\]{
+  height: 2px;
+}
+
+.h-\[40vh\]{
+  height: 40vh;
 }
 
 .h-\[8vh\]{
@@ -649,32 +705,61 @@ video {
   height: 100vh;
 }
 
-.w-16{
-  width: 4rem;
+.w-10{
+  width: 2.5rem;
+}
+
+.w-12{
+  width: 3rem;
+}
+
+.w-24{
+  width: 6rem;
 }
 
 .w-3\/4{
   width: 75%;
 }
 
+.w-32{
+  width: 8rem;
+}
+
 .w-6{
   width: 1.5rem;
 }
 
-.w-\[50\%\]{
-  width: 50%;
+.w-\[60px\]{
+  width: 60px;
 }
 
-.w-\[5rem\]{
-  width: 5rem;
+.w-\[6rem\]{
+  width: 6rem;
+}
+
+.w-\[calc\(100\%-1\.3em\)\]{
+  width: calc(100% - 1.3em);
+}
+
+.w-auto{
+  width: auto;
 }
 
 .w-full{
   width: 100%;
 }
 
-.max-w-56{
-  max-width: 14rem;
+.max-w-screen-xl{
+  max-width: 1280px;
+}
+
+.max-w-xs{
+  max-width: 20rem;
+}
+
+.scale-x-0{
+  --tw-scale-x: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform{
@@ -691,24 +776,28 @@ video {
   list-style-type: none;
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.flex-row{
+  flex-direction: row;
 }
 
 .flex-col{
   flex-direction: column;
 }
 
-.items-start{
-  align-items: flex-start;
+.flex-wrap{
+  flex-wrap: wrap;
+}
+
+.content-center{
+  align-content: center;
 }
 
 .items-center{
   align-items: center;
-}
-
-.justify-end{
-  justify-content: flex-end;
 }
 
 .justify-center{
@@ -723,8 +812,16 @@ video {
   gap: 1rem;
 }
 
-.gap-5{
-  gap: 1.25rem;
+.space-x-5 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-7 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-y-10 > :not([hidden]) ~ :not([hidden]){
@@ -757,6 +854,28 @@ video {
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
 
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-9 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.25rem * var(--tw-space-y-reverse));
+}
+
+.self-center{
+  align-self: center;
+}
+
 .overflow-x-hidden{
   overflow-x: hidden;
 }
@@ -765,12 +884,42 @@ video {
   white-space: nowrap;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
 
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.border{
+  border-width: 1px;
+}
+
+.border-0{
+  border-width: 0px;
+}
+
+.border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.bg-\[\#D8E7DA\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 231 218 / var(--tw-bg-opacity));
 }
 
 .bg-bg245_indx{
@@ -786,6 +935,11 @@ video {
 .bg-green0{
   --tw-bg-opacity: 1;
   background-color: rgb(233 242 229 / var(--tw-bg-opacity));
+}
+
+.bg-green2{
+  --tw-bg-opacity: 1;
+  background-color: rgb(47 149 100 / var(--tw-bg-opacity));
 }
 
 .bg-transparent{
@@ -809,8 +963,12 @@ video {
   background-image: url('/static/svg/bg_secc3.svg');
 }
 
-.bg-\[length\:53\%\]{
-  background-size: 53%;
+.bg-bgsecc5{
+  background-image: url('/static/svg/bg_secc5.svg');
+}
+
+.bg-auto{
+  background-size: auto;
 }
 
 .bg-bottom{
@@ -821,21 +979,38 @@ video {
   background-position: center;
 }
 
-.bg-right-bottom{
-  background-position: right bottom;
+.bg-right{
+  background-position: right;
 }
 
-.bg-right-top{
-  background-position: right top;
+.bg-right-bottom{
+  background-position: right bottom;
 }
 
 .bg-no-repeat{
   background-repeat: no-repeat;
 }
 
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-3{
+  padding: 0.75rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5{
@@ -848,16 +1023,16 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.pr-0{
-  padding-right: 0px;
+.pl-4{
+  padding-left: 1rem;
+}
+
+.pr-10{
+  padding-right: 2.5rem;
 }
 
 .pr-4{
   padding-right: 1rem;
-}
-
-.pt-20{
-  padding-top: 5rem;
 }
 
 .pt-5{
@@ -868,12 +1043,21 @@ video {
   padding-top: 1.5rem;
 }
 
+.text-left{
+  text-align: left;
+}
+
 .text-center{
   text-align: center;
 }
 
 .font-lexend{
   font-family: Lexend;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl{
@@ -886,14 +1070,24 @@ video {
   line-height: 2.5rem;
 }
 
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-xs{
@@ -942,6 +1136,11 @@ video {
   color: rgb(15 57 59 / var(--tw-text-opacity));
 }
 
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 .transition-colors{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -954,8 +1153,16 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-1000{
+  transition-duration: 1000ms;
+}
+
 .duration-300{
   transition-duration: 300ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
 }
 
 .ease-in-out{
@@ -968,18 +1175,215 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:scale-110:hover{
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .hover\:bg-\[\#D6E0D5\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(214 224 213 / var(--tw-bg-opacity));
 }
 
-@media (min-width: 768px){
-  .md\:mb-\[3rem\]{
-    margin-bottom: 3rem;
+.hover\:bg-\[\#d4d6d4\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 214 212 / var(--tw-bg-opacity));
+}
+
+.hover\:opacity-25:hover{
+  opacity: 0.25;
+}
+
+@media (min-width: 640px){
+  .sm\:mx-\[25\%\]{
+    margin-left: 25%;
+    margin-right: 25%;
   }
 
-  .md\:ml-10{
+  .sm\:my-10{
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .sm\:my-4{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .sm\:my-5{
+    margin-top: 1.25rem;
+    margin-bottom: 1.25rem;
+  }
+
+  .sm\:ml-10{
     margin-left: 2.5rem;
+  }
+
+  .sm\:mr-10{
+    margin-right: 2.5rem;
+  }
+
+  .sm\:mt-24{
+    margin-top: 6rem;
+  }
+
+  .sm\:mt-5{
+    margin-top: 1.25rem;
+  }
+
+  .sm\:mt-6{
+    margin-top: 1.5rem;
+  }
+
+  .sm\:mt-8{
+    margin-top: 2rem;
+  }
+
+  .sm\:block{
+    display: block;
+  }
+
+  .sm\:flex{
+    display: flex;
+  }
+
+  .sm\:h-auto{
+    height: auto;
+  }
+
+  .sm\:w-1\/2{
+    width: 50%;
+  }
+
+  .sm\:w-12{
+    width: 3rem;
+  }
+
+  .sm\:w-16{
+    width: 4rem;
+  }
+
+  .sm\:w-\[30\%\]{
+    width: 30%;
+  }
+
+  .sm\:w-\[40\%\]{
+    width: 40%;
+  }
+
+  .sm\:w-\[7rem\]{
+    width: 7rem;
+  }
+
+  .sm\:w-\[90\%\]{
+    width: 90%;
+  }
+
+  .sm\:w-auto{
+    width: auto;
+  }
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:flex-row{
+    flex-direction: row;
+  }
+
+  .sm\:flex-col{
+    flex-direction: column;
+  }
+
+  .sm\:justify-end{
+    justify-content: flex-end;
+  }
+
+  .sm\:space-x-10 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .sm\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .sm\:px-10{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .sm\:px-40{
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
+  .sm\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .sm\:text-left{
+    text-align: left;
+  }
+
+  .sm\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .sm\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .sm\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .sm\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .sm\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .sm\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:my-3{
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+
+  .md\:ml-\[12\%\]{
+    margin-left: 12%;
+  }
+
+  .md\:mr-\[12\%\]{
+    margin-right: 12%;
   }
 
   .md\:flex{
@@ -990,20 +1394,32 @@ video {
     display: none;
   }
 
-  .md\:h-\[70vh\]{
-    height: 70vh;
+  .md\:w-auto{
+    width: auto;
   }
 
-  .md\:w-20{
-    width: 5rem;
+  .md\:transform{
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
-  .md\:w-\[7rem\]{
-    width: 7rem;
+  .md\:flex-row{
+    flex-direction: row;
   }
 
-  .md\:bg-\[length\:40\%\]{
-    background-size: 40%;
+  .md\:flex-nowrap{
+    flex-wrap: nowrap;
+  }
+
+  .md\:items-center{
+    align-items: center;
+  }
+
+  .md\:gap-6{
+    gap: 1.5rem;
+  }
+
+  .md\:p-5{
+    padding: 1.25rem;
   }
 
   .md\:px-20{
@@ -1011,37 +1427,115 @@ video {
     padding-right: 5rem;
   }
 
-  .md\:pr-20{
-    padding-right: 5rem;
+  .md\:px-40{
+    padding-left: 10rem;
+    padding-right: 10rem;
   }
 
-  .md\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .md\:px-\[10\%\]{
+    padding-left: 10%;
+    padding-right: 10%;
   }
 
-  .md\:text-6xl{
-    font-size: 3.75rem;
-    line-height: 1;
+  .md\:pl-8{
+    padding-left: 2rem;
   }
 
-  .md\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .md\:transition-transform{
+    transition-property: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+
+  .md\:duration-300{
+    transition-duration: 300ms;
+  }
+
+  .md\:duration-500{
+    transition-duration: 500ms;
+  }
+
+  .md\:hover\:scale-105:hover{
+    --tw-scale-x: 1.05;
+    --tw-scale-y: 1.05;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:hover\:opacity-25:hover{
+    opacity: 0.25;
   }
 }
 
 @media (min-width: 1024px){
-  .lg\:mr-20{
-    margin-right: 5rem;
+  .lg\:m-14{
+    margin: 3.5rem;
+  }
+
+  .lg\:mx-5{
+    margin-left: 1.25rem;
+    margin-right: 1.25rem;
+  }
+
+  .lg\:mx-\[10\%\]{
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .lg\:mb-\[4rem\]{
+    margin-bottom: 4rem;
+  }
+
+  .lg\:ml-24{
+    margin-left: 6rem;
+  }
+
+  .lg\:ml-40{
+    margin-left: 10rem;
+  }
+
+  .lg\:ml-48{
+    margin-left: 12rem;
+  }
+
+  .lg\:mr-32{
+    margin-right: 8rem;
   }
 
   .lg\:mt-0{
     margin-top: 0px;
   }
 
+  .lg\:mt-20{
+    margin-top: 5rem;
+  }
+
+  .lg\:mt-6{
+    margin-top: 1.5rem;
+  }
+
+  .lg\:mt-7{
+    margin-top: 1.75rem;
+  }
+
+  .lg\:h-44{
+    height: 11rem;
+  }
+
   .lg\:h-\[230vh\]{
     height: 230vh;
+  }
+
+  .lg\:h-\[40vh\]{
+    height: 40vh;
+  }
+
+  .lg\:h-\[47\.5vh\]{
+    height: 47.5vh;
   }
 
   .lg\:h-\[92vh\]{
@@ -1052,20 +1546,64 @@ video {
     width: 50%;
   }
 
-  .lg\:w-1\/3{
-    width: 33.333333%;
+  .lg\:w-20{
+    width: 5rem;
   }
 
-  .lg\:w-\[50\%\]{
-    width: 50%;
+  .lg\:w-44{
+    width: 11rem;
+  }
+
+  .lg\:w-60{
+    width: 15rem;
+  }
+
+  .lg\:w-\[20\%\]{
+    width: 20%;
+  }
+
+  .lg\:w-full{
+    width: 100%;
+  }
+
+  .lg\:w-screen{
+    width: 100vw;
+  }
+
+  .lg\:max-w-md{
+    max-width: 28rem;
+  }
+
+  .lg\:origin-left{
+    transform-origin: left;
   }
 
   .lg\:flex-row{
     flex-direction: row;
   }
 
+  .lg\:justify-start{
+    justify-content: flex-start;
+  }
+
+  .lg\:justify-end{
+    justify-content: flex-end;
+  }
+
   .lg\:gap-10{
     gap: 2.5rem;
+  }
+
+  .lg\:space-x-32 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(8rem * var(--tw-space-x-reverse));
+    margin-left: calc(8rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .lg\:space-x-8 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(2rem * var(--tw-space-x-reverse));
+    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]){
@@ -1074,8 +1612,50 @@ video {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
-  .lg\:bg-\[length\:35\%\]{
-    background-size: 35%;
+  .lg\:space-y-16 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(4rem * var(--tw-space-y-reverse));
+  }
+
+  .lg\:self-end{
+    align-self: flex-end;
+  }
+
+  .lg\:whitespace-nowrap{
+    white-space: nowrap;
+  }
+
+  .lg\:border{
+    border-width: 1px;
+  }
+
+  .lg\:border-0{
+    border-width: 0px;
+  }
+
+  .lg\:border-green2{
+    --tw-border-opacity: 1;
+    border-color: rgb(47 149 100 / var(--tw-border-opacity));
+  }
+
+  .lg\:bg-green2{
+    --tw-bg-opacity: 1;
+    background-color: rgb(47 149 100 / var(--tw-bg-opacity));
+  }
+
+  .lg\:bg-transparent{
+    background-color: transparent;
+  }
+
+  .lg\:px-40{
+    padding-left: 10rem;
+    padding-right: 10rem;
+  }
+
+  .lg\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .lg\:text-left{
@@ -1086,6 +1666,11 @@ video {
     text-align: right;
   }
 
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .lg\:text-5xl{
     font-size: 3rem;
     line-height: 1;
@@ -1094,5 +1679,35 @@ video {
   .lg\:text-7xl{
     font-size: 4.5rem;
     line-height: 1;
+  }
+
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:transition-transform{
+    transition-property: transform;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+  }
+
+  .lg\:duration-300{
+    transition-duration: 300ms;
+  }
+
+  .group:hover .lg\:group-hover\:scale-x-100{
+    --tw-scale-x: 1;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 }
