--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,7 @@
         >
           <p class="rounded-md py-2 pr-4">Upgrade</p>
           <img
-            src="../static/../static/svg/ico_gold_coin.svg"
+            src="../static/svg/ico_gold_coin.svg"
             alt="Icono"
             class="w-12 sm:w-16 lg:w-20"
           />
@@ -95,7 +95,7 @@
           class="flex flex-row justify-center lg:justify-start mb-2 select-none whitespace-nowrap"
         >
           <img
-            src="../static/../static/svg/ico_man_bg.svg"
+            src="../static/svg/ico_man_bg.svg"
             alt="Icono"
             class="w-12 sm:w-16 lg:w-20"
           />
@@ -112,10 +112,7 @@
           <button
             class="w-[6rem] sm:w-[7rem] mt-6 transition-transform duration-300 ease-in-out transform hover:scale-105"
           >
-            <img
-              src="../static/../static/svg/ico_free_account.svg"
-              alt="button"
-            />
+            <img src="../static/svg/ico_free_account.svg" alt="button" />
           </button>
         </div>
       </div>
@@ -155,7 +152,7 @@
         <!-- Columna de la imagen -->
         <div class="flex justify-center items-center w-full lg:w-1/2">
           <img
-            src="../static/../static/svg/svg_bullet_bitcoins.svg"
+            src="../static/svg/svg_bullet_bitcoins.svg"
             alt="Imagen"
             class="w-3/4 lg:w-full max-w-xs lg:max-w-md transform transition-transform duration-300 hover:scale-105"
           />
@@ -184,40 +181,36 @@
           <button
             class="w-[6rem] sm:w-[7rem] mt-6 sm:mt-8 transition-transform duration-300 ease-in-out transform hover:scale-105"
           >
-            <img
-              src="../static/../static/svg/ico_free_account2.svg"
-              alt="button"
-            />
+            <img src="../static/svg/ico_free_account2.svg" alt="button" />
           </button>
         </div>
       </div>
     </section>
 
     <section
-      class="flex flex-col lg:flex-row items-center h-screen bg-bg3_indx bg-bgsecc3 bg-no-repeat bg-center text-green3 select-none text-sm px-4 sm:px-6 lg:px-8"
+      class="bg-bg3_indx flex items-center h-[120vh] bg-bgsecc3 bg-no-repeat bg-center text-green3 select-none text-sm"
     >
       <div
-        class="flex flex-col justify-center items-center w-full lg:w-1/2 h-full space-y-12"
+        class="flex flex-col justify-center items-center w-1/2 h-full space-y-12"
       >
         <p
-          class="transform transition-transform duration-300 hover:scale-105 text-center lg:text-left"
+          class="-ml-64 transform transition-transform duration-300 hover:scale-105"
         >
           Bitcoin is storming the<br />Bastille, and we're up<br />front.
         </p>
         <p
-          class="transform transition-transform duration-300 hover:scale-105 text-center lg:text-left"
+          class="-ml-64 transform transition-transform duration-300 hover:scale-105"
         >
-          Trading platform is<br />designed for those <br />who grasp the
-          power<br />of blockchain's <br />promise.
+          Trading platform is <br />designed for those <br />who grasp the power
+          <br />of blockchain's <br />promise,
         </p>
       </div>
-      <div
-        class="flex flex-col justify-center items-center w-full lg:w-1/2 h-full"
-      >
+      <div class="flex flex-col justify-center items-center w-1/2 h-full">
         <p
-          class="transform transition-transform duration-300 hover:scale-105 text-center lg:text-right"
+          class="-mb-60 -mr-64 transform transition-transform duration-300 hover:scale-105"
         >
-          we've created an exchange<br />to lead this revolutionary<br />technology.
+          we've created an exchange <br />to lead this revolutionary
+          <br />technology.
         </p>
       </div>
     </section>
@@ -403,6 +396,10 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="flex items-center justify-center h-[120vh]">
+      <!-- Contenido de tu sección -->
     </section>
 
     <footer class="h-[40vh]">
