--- a/templates/index.html
+++ b/templates/index.html
@@ -151,7 +151,7 @@
     </section>
 
     <section
-      class="flex justify-center items-center h-[100vh] md:h-auto lg:h-screen bg-bg245_indx"
+      class="flex justify-center items-center h-auto md:h-auto lg:h-screen bg-bg245_indx"
     >
       <div
         class="flex flex-col lg:flex-row space-y-10 lg:space-y-0 lg:space-x-8 w-full lg:w-3/4 my-[10%]"
